search user api and swagger
